# MLExamples

./: .gitignore  .pdm.toml  .zntrack.json  README.md  StageExecute.ipynb  TrainNN.ipynb  dvc.yaml  dvc_notebook.ipynb  manualwideresnet.ipynb  manualwideresnetCIFAR10.pth.dvc  params.yaml  pyproject.toml  timer.py
.dvc/: config
