[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Matthew Curran", email = "mcurran2@nd.edu"},
]
dependencies = [
    "torch~=1.10",
    "torchvision~=0.11",
    "jupyter~=1.0",
    "zntrack~=0.2",
]
requires-python = ">=3.9,<3.10"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
